--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<org.apache.commons.collections.version>3.2.2</org.apache.commons.collections.version>
 		<org.apache.log4j.version>1.2.17</org.apache.log4j.version>
 		<org.slf4j.log4j12.version>1.7.21</org.slf4j.log4j12.version>
-		<com.fasterxml.jackson.core.jackson.databind.version>2.9.10</com.fasterxml.jackson.core.jackson.databind.version>
+		<com.fasterxml.jackson.core.jackson.databind.version>[2.9.10.1,)</com.fasterxml.jackson.core.jackson.databind.version>
 		<org.hibernate.validator.version>5.3.0.Final</org.hibernate.validator.version>
 		<!--<org.hibernate.entitymanager.version>5.2.3.Final</org.hibernate.entitymanager.version>-->
 		<org.glassfish.web.javax.el.version>2.2.6</org.glassfish.web.javax.el.version>
